--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
     background-color: black;
     color: white;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
@@ -72,8 +72,21 @@ body:after {
     align-items: center;
 }
 
-#dashboard img {
-    max-width: 100%; /* Ensure images don't exceed container width */
-    height: auto; /* Maintain aspect ratio */
-    margin: 10px; /* Add margin between images */
+#dashboard img { */
+    /* max-width: 100%;  */
+    /* Ensure images don't exceed container width */
+    /* height: auto;  */
+    /* Maintain aspect ratio */
+    /* margin: 10px;  */
+    /* Add margin between images */
+/* } */
+
+body.loading {
+    background: url('loading.gif') no-repeat center center;
+    background-size: contain;
+}
+
+canvas {
+    position: absolute;
+    border: 1px solid red;
 }
