--- a/main.css
+++ b/main.css
@@ -80,8 +80,9 @@ body:after {
 
 #captureButton {
     position: fixed;
-    bottom: 80px;
-    left: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 10px 20px;
     font-size: 16px;
     background-color: #ffffff;
